--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ typings/
 
 # Optional npm cache directory
 .npm
+.idea
 
 # Optional eslint cache
 .eslintcache
@@ -60,4 +61,11 @@ typings/
 # next.js build output
 .next
 
-release
+# testing
+/coverage
+/reports
+
+# production
+/build
+/dist
+
